notifyhub/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notify-hub
  labels:
    pod-security.kubernetes.io/warn: restricted
