notifyhub/peerauthentication.yaml
apiVersion: security.istio.io/v1alpha
kind: PeerAuthentication
metadata:
  name: peerrrrrrr
  namespace: notifyhub
spec:
  mtls:
    mode: PERMISSIVE
