notifyhub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notify-svc
  namespace: notifyhub
spec:
  type: ClusterIP
  selector:
    app: notify
  ports:
  - port: 8080
    targetPort: 8080
